--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             <img src="img/ironman.png" alt="ironman">
         </div>
     </section>
-    <section class="flexible-container">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="img/tonystark.png" alt="dream-bg">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
-            <h3>Tony Stark, cast of Iron Man</h3>
-            <p>Iron Man is an superhero appearing Amarican comic books published by Marvel comics. The character was co-created by writter and editor Stan Lee, developed by scripter Larry Lieber, and designed by artist Don Heck and Jack Kirby. Iron Man was ranked 12th on IGN's" Top 100 Comic Book Heroes" in 2011.</p>
-            <a class="btn-link" href="https://en.wikipedia.org/wiki/Iron_Man" target="_blank">Read More</a>
+            <h3>Robert Downey Jr, cast of Iron Man</h3>
+            <p>Robert John Downey Jr. is an American actor and producer. His career has been characterized by critical and popular success in his youth, followed by a period of substance abuse and legal troubles, before a resurgence of commercial success in middle age. In 2008, Downey was named by Time magazine among the 100 most influential people in the world, and from 2013 to 2015, he was listed by Forbes as Hollywood's highest-paid actor.</p>
+            <a class="btn-link" href="https://en.wikipedia.org/wiki/Robert_Downey_Jr." target="_blank">More Info</a>
         </div>
     </section>
 </body>
