--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tony Stark Portfolio</title>
+    <title>Iron Man Portfolio</title>
     <link rel="shortcut icon" href="img/iron-man.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,7 +12,7 @@
     <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="tomato-color">Tony Stark</span> World <span class="tomato-color">!</span></h1>
+            <h1><span class="tomato-color">Iron Man</span> World <span class="tomato-color">!</span></h1>
             <h3>Most populer Avengers</h3>
             <p>Iron Man is an superhero appearing Amarican comic books published by Marvel comics. The character was co-created by writter and editor Stan Lee, developed by scripter Larry Lieber, and designed by artist Don Heck and Jack Kirby. Iron Man was ranked 12th on IGN's" Top 100 Comic Book Heroes" in 2011.</p>
             <a class="btn-link" href="https://en.wikipedia.org/wiki/Iron_Man" target="_blank">Read More</a>
